...
fun ChapterDownloadScreen(
    state: ChapterDownloadState,
    onStart: (String) -> Unit,
    onEnd: (String) -> Unit,
    confirm: () -> Unit,
    cancel: () -> Unit,
    retry: () -> Unit,
    modifier: Modifier = Modifier,
) {
    Surface(
        modifier.fillMaxWidth().heightIn(max = LocalConfiguration.current.screenHeightDp.dp * .8f),
        shape = MaterialTheme.shapes.extraLarge,
    ) {
...
